# fntv-jellyfin-bridge

./: .gitignore  .gitmodules  Dockerfile  docker-compose.yml  start.sh
bridge-node/: package-lock.json  package.json  tsconfig.json
bridge-rust/: Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  mise.toml
bridge-rust/.cargo/: config.toml
bridge-rust/src/: config.rs  lib.rs  main.rs
bridge-rust/src/cache/: mod.rs  stream_list.rs  user_info.rs
bridge-rust/src/fnos_client/: client.rs  mod.rs  signature.rs
bridge-rust/src/mappers/: id.rs  item.rs  media.rs  mod.rs  user.rs
bridge-rust/src/middleware/: auth.rs
bridge-rust/src/proxy/: stream.rs
bridge-rust/src/routes/: extras.rs  images.rs  items.rs  mediainfo.rs  mod.rs  playback.rs  shows.rs  system.rs  users.rs  views.rs
bridge-rust/src/services/: fnos.rs  hls_session.rs  image_cache.rs  item_list_cache.rs  mod.rs  session.rs
bridge-rust/src/types/: fnos.rs  jellyfin.rs  mod.rs
bridge-test/: README.md  config.ts  package-lock.json  package.json  run-tests.ts
docs/: api-tests.md  web-client-playback-flow.md
fnos-auth/: package-lock.json  package.json  tsconfig.json
scripts/: build-web.cmd  build-web.sh
specs/: 20250127-fix-stream-ext-route.md  20260217-fnos-bridge-plan.md  20260218-fnos-bridge-status.md  20260219-fnos-bridge-status.md  20260220-fnos-bridge-rust-rewrite-plan.md  20260221-api-test-plan.md  20260221-fnos-bridge-rust-debug-fixes.md  20260221-log-level-refactor.md  20260222-api-cache-plan.md  20260222-fix-sessions-playmethod-null.md  backlog-rust-optimizations.md  (+1 more)
(+62 files in other folders)
