[package]
name = "fnos-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
md-5 = "0.10"
sha1 = "0.10"

# UUID
uuid = { version = "1", features = ["v4"] }

# Concurrent data structures
dashmap = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Random
rand = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Regex
regex = "1"

# Base64
base64 = "0.22"
